# PlotSenseAI

./: .env  .gitignore  README.md  environment.yml  explanationsv2.py  plotgentasks.txt  pyproject.toml  requirements.txt  setup.py  test.ipynb  test_altoplot.py
Archive/: explanationswithopencv.py  generator.py
notebooks/: getting-started.ipynb
plotsense/: __init__.py
plotsense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plotsense/explanations/: Eexplanationsv5.py  __init__.py  api.txt  explanations copy.py  explanations.py  explanationsv2.py  explanationsv4.py  explanationsv6 copy.py  explanationsv6.py  test.ipynb  test_explainer.py  test_explainer2.py
plotsense/plot_generator/: __init__.py  altoplot.py  generator.py  plt_matplot.py
plotsense/visual_suggestion/: Visual_suggestion.py  Visual_suggestion_v2.py  __init__.py  suggestions.py
test/: test.ipynb  test_explanations.py  test_matplot.py  test_plotgen.py  test_suggestions.py  test_visual_suggestions.py
web/: .env.example  generate_plots.py  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/layout/: container.tsx  footer.tsx  header.tsx  homepage-layout.tsx  index.ts  main-layout.tsx  sidebar.tsx
web/src/components/sections/: index.ts  (+5 more)
web/src/config/: env.ts
web/src/constants/: index.ts
web/src/hooks/: index.ts  use-api.ts  use-file-upload.ts  use-local-storage.ts  use-theme.ts
web/src/styles/: theme.css
web/src/types/: index.ts
web/src/utils/: analytics.ts  api.ts  format.ts  index.ts  storage.ts  validation.ts
(+6 files in other folders)
